--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,6 @@
 <h4>Members</h4>
 <ul class="list-group">
     {{#each members}}
-    <li class="list-group-items">{{this.name}}: {{this.email}}</li>
+    <li class="list-group-item">{{this.name}}: {{this.email}}</li>
     {{/each}}
 </ul>
